tests/purs/passing/NonOrphanInstanceMulti/Lib.purs
module Lib where
-- covering sets: {{l, r}}
class C l r
data R
